--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "postcss-cssnext": "^3.0.2",
     "postcss-loader": "^2.0.8",
     "preload-webpack-plugin": "^2.0.0",
+    "raw-loader": "^1.0.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
@@ -117,13 +118,13 @@
     "css-template": "^0.2.3",
     "date-fns": "^1.29.0",
     "dotenv": "^6.0.0",
+    "express": "^4.16.2",
     "history": "^4.7.2",
     "lodash": "^4.17.4",
     "query-string": "^5.0.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
-    "react-router-dom": "^4.2.2",
     "react-tap-event-plugin": "^3.0.2",
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
@@ -134,7 +135,6 @@
     "reselect": "^3.0.1",
     "serve-static": "^1.13.2",
     "uuid": "^3.2.1",
-    "express": "^4.16.2",
     "whatwg-fetch": "2.0.3"
   }
 }
