--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "webpack-hot-middleware": "^2.20.0"
   },
   "dependencies": {
+    "@hocs/debounce-handler": "^0.5.0",
     "css-template": "^0.2.3",
     "date-fns": "^1.29.0",
     "dotenv": "^6.0.0",
@@ -129,6 +130,7 @@
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
+    "redux-form": "^7.3.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "regenerator-runtime": "^0.12.1",
