--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "query-string": "^5.0.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-event-listener": "^0.6.5",
     "react-redux": "^5.0.6",
     "react-tap-event-plugin": "^3.0.2",
     "recompose": "^0.26.0",
