--- a/package.json
+++ b/package.json
@@ -133,7 +133,7 @@
     "redux-actions": "^2.2.1",
     "redux-form": "^7.3.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0",
+    "redux-thunk": "2.2.0",
     "regenerator-runtime": "^0.12.1",
     "reselect": "^3.0.1",
     "serve-static": "^1.13.2",
