--- a/package.json
+++ b/package.json
@@ -134,10 +134,13 @@
     "redux-form": "^7.3.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "2.2.0",
+    "redux-observable": "^0.18.0",
+    "rxjs": "^5.5.5",
     "regenerator-runtime": "^0.12.1",
     "reselect": "^3.0.1",
     "serve-static": "^1.13.2",
     "uuid": "^3.2.1",
+    "sweetalert-react": "^0.4.11",
     "whatwg-fetch": "2.0.3"
   }
 }
