--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "modulePaths": [
       "<rootDir>/src"
     ],
-    "testRegex": "((/__tests__/.*\\.(test|spec))\\.(js)$|app/react/.*\\-test\\.(js)$)",
+    "testRegex": "((/__tests__/.*\\.(test|spec))\\.(js)$)",
     "testPathIgnorePatterns": [
       "/node_modules/",
       "vendor"
     ],
+    "transform": {
+      "^.+\\.js?$": "babel-jest",
+      "^.+\\.txt?$": "jest-raw-loader"
+    },
     "moduleFileExtensions": [
       "js",
       "json"
@@ -57,7 +61,8 @@
     "@babel/runtime": "7.0.0-beta.31",
     "add-asset-html-webpack-plugin": "^2.1.2",
     "babel-eslint": "^8.2.1",
-    "babel-jest": "^21.2.0",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "23.6.0",
     "babel-loader": "8.0.0-beta.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-react-intl": "^2.3.1",
@@ -91,7 +96,7 @@
     "html-webpack-condition-assets": "MQuy/html-webpack-condition-assets",
     "html-webpack-inline-chunk-plugin": "^1.1.1",
     "html-webpack-plugin": "^2.30.1",
-    "jest": "21.3.0-beta.8",
+    "jest": "23.6.0",
     "less": "^3.0.0-alpha.3",
     "lodash-webpack-plugin": "^0.11.5",
     "node-sass": "sass/node-sass",
