--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "@babel/register": "7.0.0-beta.31",
     "@babel/runtime": "7.0.0-beta.31",
     "add-asset-html-webpack-plugin": "^2.1.2",
-    "babel-eslint": "^8.2.1",
     "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "^8.2.1",
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.0-beta.0",
     "babel-plugin-lodash": "^3.3.4",
@@ -97,6 +97,7 @@
     "html-webpack-inline-chunk-plugin": "^1.1.1",
     "html-webpack-plugin": "^2.30.1",
     "jest": "23.6.0",
+    "jest-raw-loader": "^1.0.1",
     "less": "^3.0.0-alpha.3",
     "lodash-webpack-plugin": "^0.11.5",
     "node-sass": "sass/node-sass",
@@ -106,6 +107,7 @@
     "postcss-loader": "^2.0.8",
     "preload-webpack-plugin": "^2.0.0",
     "raw-loader": "^1.0.0",
+    "redux-mock-store": "1.2.3",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
@@ -138,14 +140,14 @@
     "redux-actions": "^2.2.1",
     "redux-form": "^7.3.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "2.2.0",
     "redux-observable": "^0.18.0",
-    "rxjs": "^5.5.5",
+    "redux-thunk": "2.2.0",
     "regenerator-runtime": "^0.12.1",
     "reselect": "^3.0.1",
+    "rxjs": "^5.5.5",
     "serve-static": "^1.13.2",
-    "uuid": "^3.2.1",
     "sweetalert-react": "^0.4.11",
+    "uuid": "^3.2.1",
     "whatwg-fetch": "2.0.3"
   }
 }
