--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.2",
     "history": "^4.7.2",
+    "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.4",
     "query-string": "^5.0.1",
     "react": "^16.0.0",
